[tool.poetry]
name = "toolbox"
version = "0.1.0"
description = "Python toolbox for coding challenges"
authors = ["Cem Alpturk <cem.alpturk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
