[tool.poetry]
name = "toolbox"
version = "0.1.0"
description = "Python toolbox for coding challenges"
authors = ["Cem Alpturk <cem.alpturk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
